# ictye-live-dm

./: .coverage  .gitignore  .gitmodules  LICENSE  Makefile  README.md  TODO.txt  __main__.py  callgraph.py  configs.py  design.drawio  http-server.py  http_server.py  imports.py  install.nsi  livewebsocket.py  msgs.py  plugin_erroers.py  plugin_main.py  pluginsystem.py  pyproject.toml  qodana.yaml  requirements.txt  test_requirements.txt  未命名绘图.drawio
.fleet/: settings.json
.github/resource/: run.bat
.github/windows/: winpack.ps1
.github/workflows/: main.yml.disable  pack.yaml  pack.yaml.bk  qodana_code_quality.yml  test.yaml  (+1 more)
.run/: Ictye live dm plugin api.run.xml  gen GUI.run.xml  ictye live dm cli.run.xml  ictye live dm gui.run.xml  ictye live dm list.run.xml
Apis/: Ildm.yaml
Writerside/: pa.tree  writerside.cfg
depends/: config.yaml  configs.py  logger.py
docs/: design.drawio
ictye-live-dm/: .coverage  TODO.txt  __main__.py  http_server.py  livewebsocket.py  msgs.py  pluginsystem.py  pyproject.toml  requirements.txt  test_http_server.py  test_livewebsocket.py  test_plugin_system.py
ictye-live-dm/config/system/: config.yaml
ictye-live-dm/depends/: __init__.py  configs.py  connects.py  logger.py  plugin_erroers.py  plugin_main.py  pluginmain.py
ictye-live-dm/plugin/bilibili_dm_plugin/: __init__.py
ictye-live-dm/plugin/test/: __init__.py
ictye-live-dm/src/QT-GUI/: main.ui
ictye-live-dm/src/QT-GUI/config/plugin/bilibili_dm_plugin/: config.yaml
ictye-live-dm/src/ictye_live_dm/: GUI_main.py  __main__.py  http_server.py  livewebsocket.py  main.py  pluginsystem.py
ictye-live-dm/src/ictye_live_dm/GUI/: SettingLayOut.py  Ui_MainWindow.py
ictye-live-dm/src/ictye_live_dm/GUI/StyleSheets/: CommonStyle.qss
ictye-live-dm/src/ictye_live_dm/QT-GUI/: main.ui
ictye-live-dm/src/ictye_live_dm/config/system/: config.yaml
ictye-live-dm/src/ictye_live_dm/depends/: config_registrar.py  configs.py  gui_log_formatter.py  gui_logging_hadler.py  logger.py  msgs.py  pluginmain.py
ictye-live-dm/src/ictye_live_dm/ictye_live_dm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ictye-live-dm/src/ictye_live_dm/plugin/bilibili_dm_plugin/blivedm/: handlers.py
ictye-live-dm/src/ictye_live_dm/plugin/bilibili_dm_plugin/blivedm/models/: web.py
ictye-live-dm/src/ictye_live_dm/plugin/bilibili_dm_plugin/depends/: configs.py  connects.py  logger.py  msgs.py  pluginmain.py
ictye-live-dm/src/ictye_live_dm/translate/: zh-ch_MainUI.qm
ictye-live-dm/src/ictye_live_dm/web/: living room dm.html  tku.html
ictye-live-dm/src/ictye_live_dm/web/api/: api.txt
ictye-live-dm/src/ictye_live_dm/web/js/lib/: dm_writer.js
ictye-live-dm/src/ictye_live_dm/web/js/plugin/: default_plugin_mather.js
ictye-live-dm/src/ictye_live_dm/web/js/script/: main_js.js
ictye-live-dm/src/ictye_live_dm/web/style/: default_style.css
ictye-live-dm/test/: plugin_system.py  test_livewebsocket.py  test_plugin_system.py
ictye-live-dm/test/empathy_dir/: ignore
ictye-live-dm/test/test_no_main_error/: no_main_plugin-error.py
ictye-live-dm/test/test_plugin/anaylazer_demo/: __init__.py
ictye-live-dm/test/test_plugin/message_plugin_demo/: __init__.py
ictye-live-dm/tests/: Config_element_test.py  Config_manager_test.py  Config_schema_test.py  conftest.py  httpserver_test.py
ictye-live-dm/translate/: MainUI.ts  zh-ch_MainUI.ts
ictye-live-dm/web/: tku.html
ictye-live-dm/web/js/lib/: dm_writer.js
ictye-live-dm/web/js/plugin/: default_plugin_mather.js
ictye-live-dm/web/js/script/: main_js.js  plugin_manager.js
ictye-live-dm/web/style/: default_style.css
launcher/: start.cpp
plugin/: bilibili_dm_plugin  testplugin.py
test/: test_livewebsocket.py
web/: living room dm.html
(+46 files in other folders)
